--- a/style2.css
+++ b/style2.css
@@ -16,6 +16,7 @@
       letter-spacing: 5px;
       color: rgb(255, 255, 255);
       /* color: #4574db; */
+      font-weight: 100;
   }
   .firstpagecontainer h4{
     color: #ffffff8e;
