--- a/style2.css
+++ b/style2.css
@@ -31,7 +31,7 @@
   }
   .firstpagecontainer h4{
     /* font-family: 'Bebas Neue'; */
-    font-family: Captain;
+/*     font-family: Captain; */
     color: #ffffff8e;
     font-size: 22px;
     font-weight: normal;
